# aspnetcore/src/IO.Swagger/wwwroot/swagger-original.json
@@ -69,133 +69,6 @@
           },
           "400" : {
             "description" : "bad input parameter"
-          },
-          "401" : {
-            "description" : "Not authenticated"
-          },
-          "403" : {
-            "description" : "Access token does not have the required scope"
-          }
-        }
-      }
-    },
-    "/memory.php" : {
-      "get" : {
-        "tags" : [ "public" ],
-        "summary" : "Retrieves memory value",
-        "description" : "Return value stored in memory",
-        "operationId" : "memoryID",
-        "responses" : {
-          "200" : {
-            "description" : "Memory value returned",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "type" : "number",
-                  "x-content-type" : "application/json"
-                }
-              }
-            }
-          },
-          "401" : {
-            "description" : "Not authenticated"
-          }
-        }
-      },
-      "put" : {
-        "tags" : [ "public" ],
-        "summary" : "Updates specified value",
-        "description" : "Updates values in memory",
-        "operationId" : "updateMemory",
-        "parameters" : [ {
-          "name" : "value",
-          "in" : "query",
-          "description" : "Value to update in memory",
-          "required" : true,
-          "style" : "form",
-          "explode" : true,
-          "schema" : {
-            "type" : "integer"
-          }
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "Memory has been updated",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "type" : "number",
-                  "x-content-type" : "application/json"
-                }
-              }
-            }
-          },
-          "400" : {
-            "description" : "bad input parameter"
-          },
-          "401" : {
-            "description" : "Not authenticated"
-          }
-        }
-      },
-      "post" : {
-        "tags" : [ "public" ],
-        "summary" : "Creates values in memory",
-        "description" : "Stores specified values in memory",
-        "operationId" : "createMemory",
-        "parameters" : [ {
-          "name" : "value",
-          "in" : "query",
-          "description" : "Value to store",
-          "required" : true,
-          "style" : "form",
-          "explode" : true,
-          "schema" : {
-            "type" : "integer"
-          }
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "Value was created and stored.",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "type" : "number",
-                  "x-content-type" : "application/json"
-                }
-              }
-            }
-          },
-          "400" : {
-            "description" : "bad input parameter",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "type" : "number",
-                  "x-content-type" : "application/json"
-                }
-              }
-            }
-          },
-          "401" : {
-            "description" : "Not authenticated"
-          }
-        }
-      },
-      "delete" : {
-        "tags" : [ "public" ],
-        "summary" : "Deletes memory value",
-        "description" : "Clears the memory",
-        "operationId" : "deleteMemory",
-        "responses" : {
-          "200" : {
-            "description" : "Memory Deleted"
-          },
-          "400" : {
-            "description" : "bad input parameter"
-          },
-          "401" : {
-            "description" : "Not authenticated"
           }
         }
       }
